--- a/DirectoryService/src/DirectoryService.Presentation/Properties/launchSettings.json
+++ b/DirectoryService/src/DirectoryService.Presentation/Properties/launchSettings.json
@@ -4,7 +4,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:5254/swagger/index.html",
       "applicationUrl": "http://localhost:5254",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
