--- a/DirectoryService/src/DirectoryService.Infrastructure/DirectoryService.Infrastructure.csproj
+++ b/DirectoryService/src/DirectoryService.Infrastructure/DirectoryService.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DirectoryService.Application\DirectoryService.Application.csproj" />
+      <ProjectReference Include="..\DirectoryService.Contracts\DirectoryService.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
