Подразделения, локации, позиции

--- a/DirectoryService/src/DirectoryService.Domain/DirectoryService.Domain.csproj
+++ b/DirectoryService/src/DirectoryService.Domain/DirectoryService.Domain.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\utils\Primitives\Primitives.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="CSharpFunctionalExtensions" Version="3.6.0" />
+      <PackageReference Include="TimeZoneConverter" Version="7.2.0" />
+    </ItemGroup>
+
 </Project>
