--- a/DirectoryService/.editorconfig
+++ b/DirectoryService/.editorconfig
@@ -271,6 +271,8 @@ dotnet_diagnostic.SA1623.severity = none
 dotnet_diagnostic.SA1118.severity = none
 dotnet_diagnostic.eSA1128.severity = none
 dotnet_diagnostic.SA1401.severity = none
+dotnet_diagnostic.SA1642.severity = none
+dotnet_diagnostic.SA1629.severity = none
 
 # Отключаем или меняем уровень серьезности предупреждения SA1310, чтобы не конфликтовало с новыми правилами.
 dotnet_diagnostic.SA1310.severity = none
