Конфигурации для всех доменных моделей

--- a/DirectoryService/src/DirectoryService.Presentation/appsettings.json
+++ b/DirectoryService/src/DirectoryService.Presentation/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DirectoryServiceDb" : "Server=localhost;Port=5434;Database=directory_service;Username=postgres;Password=postgres"
+  },
   "AllowedHosts": "*"
 }
