--- a/DirectoryService/src/DirectoryService.Infrastructure/DirectoryService.Infrastructure.csproj
+++ b/DirectoryService/src/DirectoryService.Infrastructure/DirectoryService.Infrastructure.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\DirectoryService.Contracts\DirectoryService.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    </ItemGroup>
+
 </Project>
