--- a/DirectoryService/src/DirectoryService.Infrastructure/DirectoryService.Infrastructure.csproj
+++ b/DirectoryService/src/DirectoryService.Infrastructure/DirectoryService.Infrastructure.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     </ItemGroup>
 
